// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination/Default matches snapshot 1`] = `
<div>
  <div
    class="border-border rounded-md border"
  >
    <div
      class="px-4 py-8 text-center text-sm"
    >
      Content above pagination
    </div>
    <div
      class="border-border flex items-center justify-center gap-2 border-t px-4 py-2"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
        data-status="active"
        disabled=""
        role="link"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
        Previous
      </a>
      <span
        class="text-muted-foreground text-sm"
      >
        Page 1 of 5
      </span>
      <a
        aria-current="page"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
        data-status="active"
        href="/"
      >
        Next
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Pagination/LastPage matches snapshot 1`] = `
<div>
  <div
    class="border-border flex items-center justify-center gap-2 border-t px-4 py-2"
  >
    <a
      aria-current="page"
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
      data-status="active"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      Previous
    </a>
    <span
      class="text-muted-foreground text-sm"
    >
      Page 5 of 5
    </span>
    <a
      aria-current="page"
      aria-disabled="true"
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
      data-status="active"
      disabled=""
      role="link"
    >
      Next
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Pagination/MiddlePage matches snapshot 1`] = `
<div>
  <div
    class="border-border flex items-center justify-center gap-2 border-t px-4 py-2"
  >
    <a
      aria-current="page"
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
      data-status="active"
      href="/"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
      Previous
    </a>
    <span
      class="text-muted-foreground text-sm"
    >
      Page 3 of 5
    </span>
    <a
      aria-current="page"
      class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs text-muted-foreground gap-1 active"
      data-status="active"
      href="/"
    >
      Next
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</div>
`;
